--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ccacb"
-version = "0.4.0"
+version = "0.4.1"
 description = "Watches the clipboard for youtube urls and downloads them"
 authors = ["Chris Allison <chris.charles.allison+ccacb@gmail.com>"]
 license = "GPL-3.0-or-later"
@@ -8,6 +8,7 @@ license = "GPL-3.0-or-later"
 [tool.poetry.dependencies]
 python = "^3.7"
 pyperclip = "^1.8.0"
+ccalogging = "^0.3.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
