--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ccacb"
-version = "0.4.1"
+version = "0.6.0"
 description = "Watches the clipboard for youtube urls and downloads them"
 authors = ["Chris Allison <chris.charles.allison+ccacb@gmail.com>"]
 license = "GPL-3.0-or-later"
@@ -9,12 +9,13 @@ license = "GPL-3.0-or-later"
 python = "^3.7"
 pyperclip = "^1.8.0"
 ccalogging = "^0.3.3"
+ccaconfig = "^0.3.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
 
 [tool.poetry.scripts]
-ytcb = "ccacb.watchclipboard:goBabe"
+ytcb = "ccacb.watchclipboard:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
