--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,12 @@
 [tool.poetry]
 name = "ccacb"
-version = "0.6.3"
+version = "0.6.4"
 description = "Watches the clipboard for youtube urls and downloads them"
 authors = ["Chris Allison <chris.charles.allison+ccacb@gmail.com>"]
 license = "GPL-3.0-or-later"
+readme = "README.md"
+repository = "https://github.com/ccdale/ccacb"
+
 
 [tool.poetry.dependencies]
 python = "^3.7"
